fix: change isBlank call to static in parseRawCommit. also udpated tests